src/objects/Rating_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom Setting to configure Rating based on Score</description>
    <fields>
        <fullName>ES_Comp_Fit_Rating_Cutoff_1__c</fullName>
        <label>ES Comp Fit Rating Cutoff 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Rating_Cutoff_2__c</fullName>
        <label>ES Comp Fit Rating Cutoff 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Rating_Cutoff_3__c</fullName>
        <label>ES Comp Fit Rating Cutoff 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Rating_Cutoff_1__c</fullName>
        <label>ES Person Engagement Rating Cutoff 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Rating_Cutoff_2__c</fullName>
        <label>ES Person Engagement Rating Cutoff 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Rating_Cutoff_3__c</fullName>
        <label>ES Person Engagement Rating Cutoff 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Rating_Cutoff_1__c</fullName>
        <label>ES Person Fit Rating Cutoff 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Rating_Cutoff_2__c</fullName>
        <label>ES Person Fit Rating Cutoff 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Rating_Cutoff_3__c</fullName>
        <label>ES Person Fit Rating Cutoff 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rating Configuration</label>
</CustomObject>